plugins {
    id 'java'
    id 'jacoco'
    alias(libs.plugins.spring.boot.plugin)
    alias(libs.plugins.spring.dependency.management.plugin)
    alias(libs.plugins.sonarqube.plugin)
}

group = 'io.wintech'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.spring.boot.starter.data.jpa
    implementation libs.spring.boot.starter.web
    implementation libs.liquibase.core
    implementation libs.jakarta.validation.api
    implementation libs.spring.security.core
    implementation libs.apache.commons.lang3
    implementation libs.guava
    compileOnly libs.lombok
    runtimeOnly libs.mysql
    annotationProcessor libs.lombok
    testImplementation libs.spring.boot.starter.test
    testImplementation libs.testcontainers.mysql
    testImplementation libs.testcontainers.junit.jupiter
    testImplementation libs.spring.boot.testcontainers
}

tasks.named('test') {
    useJUnitPlatform()

}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

sonar {
    properties {
        property "sonar.projectKey", "ifeanyichukwuOtiwa-sports_ss-security"
        property "sonar.organization", "ifeanyichukwuotiwa-sports"
        property "sonar.host.url", "https://sonarcloud.io"
        property("sonar.gradle.skipCompile", true)
    }
}
